conf/after6.rules
#
# rules.input-after
#
# Rules that should be run after the ufw command line added rules. Custom
# rules should be added to one of these chains:
#   ufw6-after-input
#   ufw6-after-output
#   ufw6-after-forward
#

# Don't delete these required lines, otherwise there will be errors
*filter
:ufw6-after-input - [0:0]
:ufw6-after-output - [0:0]
:ufw6-after-forward - [0:0]
# End required lines

# don't log noisy services by default
-A ufw6-after-input -p tcp --dport 137 -j RETURN
-A ufw6-after-input -p udp --dport 137 -j RETURN
-A ufw6-after-input -p tcp --dport 138 -j RETURN
-A ufw6-after-input -p udp --dport 138 -j RETURN
-A ufw6-after-input -p tcp --dport 445 -j RETURN
-A ufw6-after-input -p udp --dport 445 -j RETURN
-A ufw6-after-input -p udp --dport 67 -j RETURN
-A ufw6-after-input -p udp --dport 68 -j RETURN

# catchall for logging
-A ufw6-after-input -m limit --limit 3/min --limit-burst 10 -j LOG --log-prefix "[UFW BLOCK INPUT]: "
-A ufw6-after-forward -m limit --limit 3/min --limit-burst 10 -j LOG --log-prefix "[UFW BLOCK FORWARD]: "

# don't delete the 'COMMIT' line or these rules won't be processed
COMMIT
